# rag_multi_modal_document

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts_pdf/tables/transformer_article/: tbl-0001-00-2592b5.csv  tbl-0001-00-2592b5.json  tbl-0002-00-bd2478.csv  tbl-0002-00-bd2478.json  tbl-0003-00-f8eb3e.csv  tbl-0003-00-f8eb3e.json  tbl-0004-00-9981b9.csv  tbl-0004-00-9981b9.json  tbl-0005-00-92eb1c.csv  tbl-0005-00-92eb1c.json
docs/: LOGGING.md  LOGGING_METRICS.md  LOGGING_QUICKSTART.md  LOGGING_SUMMARY.md
notebook/: exploration.ipynb
scripts/: log_stats.py
src/clients/: chroma_client.py  gemini_client.py
src/embedding/: google_embed.py
src/evaluation/: evaluate_rag.py
src/llm_poc/: __main__.py  run_pipeline.py
src/prompts/: system_prompt.py  task_prompts.py
src/retriever/: rag_retriever.py  retriever_collection.py  run_retrieval.py
src/utils/: helpers.py  image_extractor.py  logger.py  pdf_orchestrator.py  table_extractor.py  text_loader.py
